// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots do texto impresso composto (classe + subclasse entrelaçados) — nível 14 de cada subclasse > estrelas nível 14 1`] = `
[
  "#Idioma Druídico
Mensagens ocultas; outros detectam com Invest CD15, mas não decifram sem magia",
  "#Forma Selvagem [__][__][__]
AB: Fera conhecida por 1/2 nível h; sair AB
PV Temp = nível; usa bloco Fera, mantém tipo/PV/DV, INT/SAB/CAR, classe, idiomas, talentos e Prof perícias/Salv
Sem conjurar; Concent mantém
> 1/turno, 0 FS: 1 espaço -> +1 FS
> [__] 1 FS -> +1 espaço 1o. 1/DL
DC: +1 uso; DL: todos",
  "#Forma Estrelada
1 FS, AB, 10 min; escolha; início turno pode trocar:
> Arqueiro: ao ativar e AB -> Atq mágico 18m, 2d8+SAB Rad
> Dragão: testes INT/SAB e Salv CON Concent, d20 9 ou menos = 10; Voo 6m, paira
> Taça: magia com espaço que cura -> você/alvo 9m cura 2d8+SAB
> Res Conc/Cort/Perf",
  "#Presságio Cósmico [__][__][__]
Após DL: par=Prosperidade, ímpar=Infortúnio
Reação, Teste d20 a 9m -> +1d6 ou -1d6
Todos/DL",
]
`;

exports[`snapshots do texto impresso composto (classe + subclasse entrelaçados) — nível 14 de cada subclasse > lua nível 14 1`] = `
[
  "#Idioma Druídico
Mensagens ocultas; outros detectam com Invest CD15, mas não decifram sem magia",
  "#Forma Selvagem [__][__][__]
AB: Fera conhecida por 1/2 nível h; sair AB
PV Temp = 3 x nível; ND máx 4; CA 13+SAB se maior
Usa bloco Fera, mantém tipo/PV/DV, INT/SAB/CAR, classe, idiomas, talentos e Prof perícias/Salv
Sem conjurar; Concent mantém
> Lua: Atq Fera normal/Rad; +SAB Salv CON
> Lua: 1/turno, Atq Fera -> +2d10 Rad
> 1/turno, 0 FS: 1 espaço -> +1 FS
> [__] 1 FS -> +1 espaço 1o. 1/DL
DC: +1 uso; DL: todos",
  "#Passo Lunar [__][__][__]
AB: teleporte 9m; Vant no próx Atq deste turno
Pode levar 1 aliado voluntário a 3m; surge até 3m do destino
Todos/DL; espaço 2o+ -> +1 uso",
]
`;

exports[`snapshots do texto impresso composto (classe + subclasse entrelaçados) — nível 14 de cada subclasse > mar nível 14 1`] = `
[
  "#Idioma Druídico
Mensagens ocultas; outros detectam com Invest CD15, mas não decifram sem magia",
  "#Forma Selvagem [__][__][__]
AB: Fera conhecida por 1/2 nível h; sair AB
PV Temp = nível; usa bloco Fera, mantém tipo/PV/DV, INT/SAB/CAR, classe, idiomas, talentos e Prof perícias/Salv
Sem conjurar; Concent mantém
> 1/turno, 0 FS: 1 espaço -> +1 FS
> [__] 1 FS -> +1 espaço 1o. 1/DL
DC: +1 uso; DL: todos",
  "#Ira do Mar
1 FS, AB: Emanação 3m por 10 min em você ou aliado voluntário a 18m
Ao ativar e AB: alvo na área Salv CON; falha 3d6 Gel e Grande- empurra 4,5m
> Ativa: Voo = Desl; Res Elet/Gel/Trov
> 2 FS: manifeste em você + aliado simultaneamente",
]
`;

exports[`snapshots do texto impresso composto (classe + subclasse entrelaçados) — nível 14 de cada subclasse > terra nível 14 1`] = `
[
  "#Idioma Druídico
Mensagens ocultas; outros detectam com Invest CD15, mas não decifram sem magia",
  "#Forma Selvagem [__][__][__]
AB: Fera conhecida por 1/2 nível h; sair AB
PV Temp = nível; usa bloco Fera, mantém tipo/PV/DV, INT/SAB/CAR, classe, idiomas, talentos e Prof perícias/Salv
Sem conjurar; Concent mantém
> 1/turno, 0 FS: 1 espaço -> +1 FS
> [__] 1 FS -> +1 espaço 1o. 1/DL
DC: +1 uso; DL: todos",
  "#Auxílio da Terra
1 FS, Ação, ponto 18m/raio 3m
Escolhidos Salv CON -> 4d6 Necr, sucesso 1/2; 1 alvo cura 4d6",
  "#Recuperação Natural
> [__] 1 magia do Círculo 1o+ sem espaço. 1/DL
> [__] DC: recupere até 7 círculos de espaços, máx 5o. 1/DL",
  "#Proteção Natural - Tropical
Imune Enven; Res Venenoso",
  "#Santuário Natural
1 FS, Ação: Cubo 4,5m até 36m por 1 min
Você/aliados: Cob Parc; aliados ganham sua Res do terreno
AB -> move Cubo 18m, mantendo até 36m",
]
`;
